Fix for flickering card

--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,6 @@ body {
   position: relative;
   border-radius: .25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
-  background-color: #fff;
   /* height: 280px; */
 
   /* card flip effect  */
@@ -83,11 +82,11 @@ body {
 
 .card .front {
   left: 0;
+  background-color: #fff;
 }
 
 .card .back {
   transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
 }
 
 .card .front,
@@ -95,7 +94,6 @@ body {
   position: absolute;
   padding: 1rem;
   backface-visibility: hidden;
-  -webkit-backface-visibility: hidden
 }
 
 .flashcard-options {
